--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
