--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "expo-speech": "~11.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
